--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -3,4 +3,4 @@
   - title @project.name, "Projects"
   %br
   = link_to "Edit Project", edit_project_path(@project)
-  = link_to "Delete Project", @project, :method => :delete,  :confirm => "Are you sure you want to delete this project?"
+  = link_to "Delete Project", @project, :confirm => "Are you sure you want to delete this project?", :method => :delete
