--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -4,3 +4,4 @@
   %br
   = link_to "Edit Project", edit_project_path(@project)
   = link_to "Delete Project", @project, :confirm => "Are you sure you want to delete this project?", :method => :delete
+  = link_to "New Ticket", new_project_ticket_path(@project)
