--- a/app/views/projects/show.html.haml
+++ b/app/views/projects/show.html.haml
@@ -2,8 +2,10 @@
   = @project.name
   - title @project.name, "Projects"
 %br
-= link_to "Edit Project", edit_project_path(@project)
-= link_to "Delete Project", @project, :confirm => "Are you sure you want to delete this project?", :method => :delete
+= admin_only do
+  = link_to "Edit Project", edit_project_path(@project)
+  = link_to "Delete Project", @project, :confirm => "Are you sure you want to delete this project?", :method => :delete
+
 = link_to "New Ticket", new_project_ticket_path(@project)
 %ul{ :id=>'tickets' }
   - @project.tickets.each do |ticket|
