--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,9 @@
       = "Signed in as #{current_user.email}"
     - else
       = link_to "Sign up", new_user_registration_path
+      = link_to "Sign in", new_user_session_path
+    - admin_only do
+      = link_to "Admin", admin_root_path
 
-  = link_to "Sign in", new_user_session_path
   = yield
 
